force-app/main/default/objects/Storage_Provider__mdt/Storage_Provider__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for external storage providers (AWS S3, Google Drive, SharePoint, etc.)</description>
    <label>Storage Provider</label>
    <pluralLabel>Storage Providers</pluralLabel>
</CustomObject>