force-app/main/default/objects/Storage_Provider__mdt/fields/Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>Icon_Name__c</fullName>
    <label>Icon Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>