force-app/main/default/objects/Storage_Provider__mdt/fields/Max_File_Size_MB__c.field-meta.xml
<CustomField>
    <fullName>Max_File_Size_MB__c</fullName>
    <label>Max File Size (MB)</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>