force-app/main/default/objects/Storage_Provider__mdt/fields/Provider_Type__c.field-meta.xml
<CustomField>
    <fullName>Provider_Type__c</fullName>
    <label>Provider Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S3</fullName>
            </value>
            <value>
                <fullName>Google_Drive</fullName>
                <label>Google Drive</label>
            </value>
            <value>
                <fullName>SharePoint</fullName>
            </value>
            <value>
                <fullName>Azure_Blob</fullName>
                <label>Azure Blob</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>